--- a/interfazWeb/index.html
+++ b/interfazWeb/index.html
@@ -1,112 +1,116 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Coiny&family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
-    <title>Web Guapas</title>
-    <link rel="stylesheet" href="../css/estilos.css">
-  </head>
-  <body>
-    <header>
-      <h2 class="header_title">
-        wwwwapas
-      </h2>
-      <nav class="header_nav">
-        <ul>
-          <li>Inicio</li>
-          <li>Servicios</li>
-          <li>Contacto</li>
-        </ul>
-      </nav>
-    </header>
-    <main>
-      <article class="main_article">
-        <h1 class="main_h1">Somos <strong class="main_h1-strong">wwwwapas</h1>
-        <h3 class="main_h3">Social media managers | creadoras de contenido</h3>
-        <p class="main_p">
-          Nos encargamos de construir, gestionar y administrar la comunidad
-          online de tu marca, empresa o negocio.
-          <strong
-            >¡Creamos relaciones estables y duraderas con tus clientes!</strong
-          >
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="https://fonts.googleapis.com/css2?family=Coiny&family=Roboto:wght@300;400;700;900&display=swap"
+    rel="stylesheet">
+  <title>Web Guapas</title>
+  <link rel="stylesheet" href="../css/estilos.css">
+</head>
+
+<body>
+  <header>
+    <h2 class="header_title">
+      wwwapas
+    </h2>
+    <nav class="header_nav">
+      <ul>
+        <li><a href="#">Inicio</a></li>
+        <li><a href="#">Contacto</a></li>
+        <li><a href="#">Login</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <article class="main_article">
+      <h1 class="main_h1">Somos <p class="main_h1-strong"><strong>wwwapas</strong></p>
+      </h1>
+      <h3 class="main_h3">Social media managers | creadoras de contenido</h3>
+      <p class="main_p">
+        Nos encargamos de construir, gestionar y administrar la comunidad
+        online de tu marca, empresa o negocio.
+        <strong>¡Creamos relaciones estables y duraderas con tus clientes!</strong>
+      </p>
+    </article>
+    <article class="main_article">
+      <section class="main_section">
+        <h3 class="section_h3">¡Hola! Somos SOFI & JULIA,</h3>
+        <p class="section_p-21">
+          las social media managers, las creadoras de contenido, las
+          copywriters, las generadoras de leads, las diseñadoras, las
+          estrategas en marketing digital, las potenciadoras de ventas, el
+          posicionamiento de tu marca. <strong class="p_strong">¡Somos el complemento que necesitás
+            para hacer crecer tu marca! ¡Somos wwwapas!</strong>
         </p>
-      </article>
-      <article class="main_article">
-        <section class="main_section">
-          <h3 class="section_h3">¡Hola! Somos SOFI & JULIA,</h3>
-          <p class="section_p-21">
-            las social media managers, las creadoras de contenido, las
-            copywriters, las generadoras de leads, las diseñadoras, las
-            estrategas en marketing digital, las potenciadoras de ventas, el
-            posicionamiento de tu marca. <strong class="p_strong">¡Somos el complemento que necesitás
-              para hacer crecer tu marca! ¡Somos wwwapas!</strong> 
-          </p>
-        </section>
-        <section class="main_section">
-          <h3 class="section_h3">GESTIONAMOS TUS REDES SOCIALES</h3>
-          <p class="section_p-21">
-            La transformación digital no es solo para grandes compañías, todas las
-            empresas deben emprenderla cuanto antes y aquí es donde podemos
-            asistirte. Armamos estrategias a medida para tu empresa, marca o
-            producto. <strong class="p_strong"> 
-              ¡Aumentá tu presencia digital y generá nuevas ventas y
-              contactos!
-            </strong> 
-          </p>
-        </section>
-      </article>
-      <article class="main_article">
-        <h2 class="article_h2">Servicios</h2>
-        <ol class="article_ol">
-          <li>Análisis de perfil (Benchmarking)</li>
-          <li>Revisión y activación de canales</li>
-          <li>Gestión, creación y diseño de contenido</li>
-          <li>Repuestas a mensajes y consultas</li>
-          <li>
-            Segmentación de promociones según el público objetivo de la pauta
-            publicitaria
-          </li>
-          <li>
-            Diagramamos un calendario que se ajuste a los objetivos de la
-            empresa
-          </li>
-          <li class="ol_strong"><strong>¡Empezamos a comunicar!</strong></li>
-        </ol>
-      </article>
-      <article class="main_article">
-        <section>
-          <h2>¿Quéres que nos contactemos con vos?</h2>
-          <h3>Envianos tu consulta >></h3>
-        </section>
-        <section>
-          <form action="">
-            <label for="name" name=" name">Nombre*</label>
-            <input type="text" name="name" />
-            <label for="email" name="email">Email*</label>
-            <input type="email" name="email" />
-            <label for="mensaje" name="mensaje">Mensaje*</label>
-            <textarea name="mensaje" id="" cols="30" rows="10"></textarea>
-            <input type="submit" name="submit" /><label for="submit"
-              >Enviar consulta</label
-            >
-            <input type="reset" name="reset" /><label for="reset">Borrar</label>
-          </form>
-        </section>
-      </article>
-      <article>
-        <ul>
-          <li><a href="">redes wwwapas</a></li>
-          <li><a href="">instagram</a></li>
-          <li><a href="">ball</a></li>
-          <li><a href="">linkedin</a></li>
-          <li><a href="">facebook</a></li>
-        </ul>
-      </article>
-    </main>
-    <footer>
-      <p>wwwapas</p>
-      <p>wwwapas_sm@mail.com</p>
-    </footer>
-  </body>
+      </section>
+      <section class="main_section">
+        <h3 class="section_h3">GESTIONAMOS TUS REDES SOCIALES</h3>
+        <p class="section_p-21">
+          La transformación digital no es solo para grandes compañías, todas las
+          empresas deben emprenderla cuanto antes y aquí es donde podemos
+          asistirte. Armamos estrategias a medida para tu empresa, marca o
+          producto. <strong class="p_strong">
+            ¡Aumentá tu presencia digital y generá nuevas ventas y
+            contactos!
+          </strong>
+        </p>
+      </section>
+    </article>
+
+    <article class="main_article">
+      <h2 class="article_h2">Servicios</h2>
+      <ol class="article_ol">
+        <li>Análisis de perfil (Benchmarking)</li>
+        <li>Revisión y activación de canales</li>
+        <li>Gestión, creación y diseño de contenido</li>
+        <li>Repuestas a mensajes y consultas</li>
+        <li>
+          Segmentación de promociones según el público objetivo de la pauta
+          publicitaria
+        </li>
+        <li>
+          Diagramamos un calendario que se ajuste a los objetivos de la
+          empresa
+        </li>
+        <li class="ol_strong"><strong>¡Empezamos a comunicar!</strong></li>
+      </ol>
+    </article>
+    <aside class="main_aside">
+      <section>
+        <h2>¿Quéres que nos</h2>
+        <br>
+        <h2>contactemos con vos?</h2>
+        <h3>Envianos tu consulta >></h3>
+      </section>
+      <section>
+        <form action="">
+          <label for="name" name=" name">Nombre*</label>
+          <input type="text" name="name" />
+          <label for="email" name="email">Email*</label>
+          <input type="email" name="email" />
+          <label for="mensaje" name="mensaje">Mensaje*</label>
+          <textarea name="mensaje" id="" cols="30" rows="10"></textarea>
+          <input type="submit" name="submit" /><label for="submit">Enviar consulta</label>
+          <input type="reset" name="reset" /><label for="reset">Borrar</label>
+        </form>
+      </section>
+    </aside>
+    <article>
+      <ul>
+        <li><a href="">redes wwwapas</a></li>
+        <li><a href="">instagram</a></li>
+        <li><a href="">ball</a></li>
+        <li><a href="">linkedin</a></li>
+        <li><a href="">facebook</a></li>
+      </ul>
+    </article>
+  </main>
+  <footer class="footer">
+    <strong>wwwapas</strong>
+    <a href="mailto: wwwapas_sm@mail.com">wwwapas_sm@mail.com</a>
+  </footer>
+</body>
+
 </html>
