--- a/interfazWeb/index.html
+++ b/interfazWeb/index.html
@@ -108,7 +108,7 @@
     </article>
   </main>
   <footer class="footer">
-    <strong>wwwapas</strong>
+    <strong>wwwwapas</strong>
     <a href="mailto: wwwapas_sm@mail.com">wwwapas_sm@mail.com</a>
   </footer>
 </body>
