--- a/interfazWeb/index.html
+++ b/interfazWeb/index.html
@@ -22,8 +22,8 @@
     </header>
     <main>
       <article class="main_article">
-        <section>
-          <h1 class="main_h1">Somos <strong class="main_h1-strong">wwwwapas</h1>
+        <section class="main_section">
+          <h1 class="main_h1">Somos <br> <strong class="main_h1-strong">wwwwapas</h1>
             <h3 class="main_h3">Social media managers | creadoras de contenido</h3>
             <p class="main_p">
               Nos encargamos de construir, gestionar y administrar la comunidad
@@ -34,7 +34,7 @@
             </p>
         </section>
         <figure>
-          <img src="/img/foto.JPG" alt="mujeres en la oficina">
+          <img  class="img_principal" src="/img/foto.png" alt="mujeres en la oficina">
         </figure>
       </article>
       <article class="main_article">
@@ -65,7 +65,7 @@
         <figure class="section_left">
           <img src="/img/img-servicios.png" alt="logo wwwapas">
         </figure>
-        <section class="section_right">
+        <section class="main_section">
           <h2 class="article_h2">Servicios</h2>
           <ol class="article_ol">
             <li>Análisis de perfil (Benchmarking)</li>
@@ -85,25 +85,25 @@
         </section>
       </article>
       <article class="main_article" id="contacto">
-        <section class="section_left">
+        <section class="main_section contact">
           <h2 class="h2_contact">¿Quéres que nos contactemos con vos?</h2>
           <h3 class="h3_strong"><strong>Envianos tu consulta >></strong></h3>
         </section>
-        <section class="section_right">
-          <form action="codigo.php" method="POST">
+        <section class="main_section">
+          <form action="/php/codigo.php" method="POST">
             <label for="name" name=" name">Nombre<span>*</span></label>
-            <input type="text" name="name" id="name" />
+            <input class="input_text" type="text" name="nombre" id="name" />
             <label for="email" name="email">Email<span>*</span></label>
-            <input type="email" name="email"  id="email"/>
-            <label for="mensaje" name="mensaje">Mensaje<span>*</span></label>
-            <textarea name="mensaje" cols="30" rows="10" id="mensaje"></textarea>
+            <input class="input_text" type="email" name="email"  id="email"/>
+            <label for="mensaje" name="comentarios">Mensaje<span>*</span></label>
+            <textarea name="comentarios" cols="30" rows="10" id="mensaje"></textarea>
               <input class="btn" type="submit" name="submit" value="Enviar consulta"/>
               <input class="btn" type="reset" name="reset" value="Borrar"/>
           </form>
         </section>
       </article>
-      <article>
-        <ul>
+      <article class="main_article">
+        <ul class="navbar_li">
           <li><a href="/interfazWeb/index.html" class="li_name">redes wwwapas</a></li>
           <li><a href="#"><img class="redes" src="/img/instagram-icon.png" alt="instagram icon"></a></li>
           <li><a href="#"><img class="redes" src="/img/dribbble-icon.png" alt="dribbble icon"></a></li>
