FIXEDT index.html

--- a/index.html
+++ b/index.html
@@ -97,8 +97,10 @@
             <input class="input_text" type="email" name="email"  id="email"/>
             <label for="mensaje" name="comentarios">Mensaje<span>*</span></label>
             <textarea name="comentarios" cols="30" rows="10" id="mensaje"></textarea>
+            <fieldset>
               <input class="btn" type="submit" name="submit" value="Enviar consulta"/>
               <input class="btn" type="reset" name="reset" value="Borrar"/>
+            </fieldset>
           </form>
         </section>
       </article>
