EDIT README and INDEX

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Coiny&family=Roboto:wght@300;400;700;900&display=swap" rel="stylesheet">
     <title>Web Guapas</title>
-    <link rel="stylesheet" href="../css/estilos.css">
+    <link rel="stylesheet" href="css/estilos.css">
   </head>
   <body>
     <header>
@@ -34,7 +34,7 @@
             </p>
         </section>
         <figure>
-          <img  class="img_principal" src="/img/foto.png" alt="mujeres en la oficina">
+          <img  class="img_principal" src="img/foto.png" alt="mujeres en la oficina">
         </figure>
       </article>
       <article class="main_article">
@@ -63,7 +63,7 @@
       </article>
       <article class="main_article" id="servicios">
         <figure class="section_left">
-          <img src="/img/img-servicios.png" alt="logo wwwapas">
+          <img src="img/img-servicios.png" alt="logo wwwapas">
         </figure>
         <section class="main_section">
           <h2 class="article_h2">Servicios</h2>
@@ -106,7 +106,7 @@
       </article>
       <article class="main_article">
         <ul class="navbar_li">
-          <li><a href="/interfazWeb/index.html" class="li_name">redes wwwapas</a></li>
+          <li><a href="index.html" class="li_name">redes wwwapas</a></li>
           <li><a href="#"><img class="redes" src="/img/instagram-icon.png" alt="instagram icon"></a></li>
           <li><a href="#"><img class="redes" src="/img/dribbble-icon.png" alt="dribbble icon"></a></li>
           <li><a href="#"><img class="redes" src="/img/linkedin-icon.png" alt="linkedin icon"></a></li>
